First I created a variable called frame to connect the back with the front. A variable was also created to define whose shift it is. And also a variable to know if the game is running or not.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo da velha</title>
+    <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Jogo da velha</h1>
+    <h1>Tic-Tac-Toe</h1>
 
     <div class="area">
         <div data-item="a1" class="item b r"></div>
@@ -26,16 +26,16 @@
 
     <div class="info">
         <div class="infoitem">
-            <div class="infotitulo">A vez é:</div>
+            <div class="infotitulo">The turn is:</div>
             <div class="infocorpo vez">--</div>
         </div>
         <div class="infoitem">
-            <div class="infotitulo">Vencedor:</div>
+            <div class="infotitulo">Winner:</div>
             <div class="infocorpo resultado">--</div>
         </div>
     </div>
 
-    <button class="reset">Resetar</button>
+    <button class="reset">Reset</button>
 
     <script src="script.js"></script>
 </body>
